--- a/profile_card.html
+++ b/profile_card.html
@@ -159,7 +159,7 @@
         <div class="card-container">
             <span class="pro">PRO</span>
             <div class="img">
-                <img src="./img/1.jpg" alt="Profile Picture">
+                <img src="1.jpg" alt="Profile Picture">
             </div>
             <h3>Noor E Moriom</h3>
             <h6>Sylhet, Bangladesh</h6>
